<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_table_layout">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_span="4"
                android:background="@color/white"
                android:textSize="@dimen/result_text" />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:text="@string/plus"
                android:textSize="@dimen/button_text" />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:text="@string/minus"
                android:textSize="@dimen/button_text" />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:text="@string/multiply"
                android:textSize="@dimen/button_text" />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:text="@string/equals"
                android:textSize="@dimen/button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttons_margin"
                android:text="@string/divider"
                android:textSize="@dimen/button_text" />
        </TableRow>
    </TableLayout>
</FrameLayout>


<!--<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->

<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_gravity="center"-->
<!--    android:layout_margin="10dp"-->
<!--    android:columnCount="4"-->
<!--    android:useDefaultMargins="true"-->
<!--    tools:context=".MainActivity">-->

<!--    <Space android:layout_column="3"/>-->

<!--    <Button-->
<!--        android:text="+"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="-"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="*"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="/"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="1"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="2"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="3"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="4"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="5"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="6"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="7"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="8"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="9"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="."-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:text="0"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:layout_rowSpan="2"-->
<!--        android:layout_gravity="fill"-->
<!--        android:text="<"-->
<!--        android:textSize="35sp" />-->

<!--    <Button-->
<!--        android:layout_columnSpan="3"-->
<!--        android:layout_gravity="fill"-->
<!--        android:text="="-->
<!--        android:textSize="35sp" />-->

<!--</GridLayout>-->
